自定义ReActOutputTool代替死模板装载的ToolDomain